<resources>
    <string name="preference_file_key">com.projectpcscanner.preference</string>
    <string name="app_name">Project PC Scanner</string>
    <string name="welcome_text">¡Bienvenido!</string>
    <string name="next_page">Next page</string>
    <string name="logo">Logo</string>
    <string name="link">¡Conectar!</string>
    <string name="link_description">Para empezar, hay que conectarse a tu PC</string>
    <string name="more_options">More Options</string>
    <string name="dialog_network_error_title">Error de conexión</string>
    <string name="dialog_network_error_content">Parece que no ha sido posible establecer conexión con el servidor</string>
    <string name="help_icon">help icon</string>
    <string name="search">Search</string>
    <string name="detail_transition_item">detailTransitionItem</string>
    <string name="current_value">Valor actual:</string>
    <string name="max_value">Valor máximo:</string>
    <string name="circlepointer">circlePointer</string>
    <string name="temperature">Temperatura</string>
    <string name="voltage">Voltaje</string>
    <string name="number_of_cores">Número de núcleos</string>
    <string name="disk_type">Tipo de disco</string>
    <string name="solid_state">SSD</string>
    <string name="hard_state">HDD </string>
    <string name="retry">Reintentar</string>
    <string name="close">Cerrar</string>
    <string name="nd_properties">Propiedades</string>
    <string name="nd_data">Datos</string>
    <string name="nd_tasks">Procesos</string>
    <string name="nd_programs">Programas</string>
    <string name="nd_info">Acerca de</string>
    <string name="ndLogo">ndLogo</string>
    <string name="contact">Contacto</string>
    <string name="nd_supportTitle">Soporte</string>
    <string name="help">Ayuda</string>
    <string name="otherTitle">Otros</string>
    <string name="repository">Repositorio</string>
    <string name="pc_name">Nombre del PC</string>
    <string name="ipv4">IPV4</string>
    <string name="ipv6">IPV6</string>
    <string name="introduce_ip">Introducir IP</string>
    <string name="exit">Salir</string>
    <string name="exit_message">¿Estás seguro de querer cerrar la app?</string>
    <string name="delete_database">Borrar los datos</string>
    <string name="delete_database_message">¿Estás seguro de querer borrar la base de datos? Esta opción no tiene vuelta atrás</string>
    <string name="reset_application">Resetear la aplicación</string>
    <string name="reset_application_message">¿Estás seguro de querer resetear la aplicación? Esta opción no tiene vuelta atrás</string>
    <string name="device_connected_title">Dispositivo conectado</string>
    <string name="device_connected">¡El dispositivo %1$s ha sido conectado!</string>
    <string name="device_disconnected_title">Dispositivo desconectado</string>
    <string name="device_disconnected">El dispositivo %1$s ha sido desconectado</string>
    <string name="actions">Acciones</string>
    <string name="shutdown">Apagar PC</string>
    <string name="reboot">Reiniciar PC</string>
    <string name="reconnect">Reconectar</string>
    <string name="reconnect_text">¡Ups! Parece que se ha perdido la conexión con el servidor</string>
    <string name="name">Nombre</string>
    <string name="pid">PID</string>
    <string name="user">Usuario</string>
    <string name="memory">Memoria</string>
    <string name="description">Descripción</string>
    <string name="applications">Aplicaciones</string>
    <string name="background_task">Procesos en segundo plano</string>
    <string name="icon_image">iconImage</string>
    <string name="todo">TODO</string>
    <string name="introduce_filter">Introduce un filtro</string>
    <string name="wake_on_lan">Encender el PC de forma remota</string>
    <string name="wake_on_lan_text">Para encender el PC de forma remota se necesita la dirección MAC</string>
    <string name="wake_on_lan_hint">Dirección MAC</string>
    <string name="turn_on">Encender</string>
    <string name="executed_program_title">Programa lanzado</string>
    <string name="executed_program_body">El programa seleccionado se ejecutó correctamente</string>
    <string name="program_dialog_success_body">¡Programa lanzado correctamente!</string>
    <string name="program_dialog_sucess_header">Programa lanzado</string>
    <string name="introduce_ip_menu">Introducir IP manualmente</string>
    <string name="introduce_password">Introducir contraseña</string>
    <string name="introduce_password_text">Para poder conectar el PC y el móvil es necesaria una contraseña</string>
    <string name="password">Contraseña</string>
    <string name="snackbar_password_error_text">Error al introducir la contraseña</string>
    <string name="number_of_process">Número de procesos</string>
    <string name="builder">Fabricante</string>
    <string name="drive_type">Tipo</string>
    <string name="drive_format">Formateo</string>
    <string name="upload_speed">Velocidad de subida</string>
    <string name="download_speed">Velocidad de bajada</string>
    <string name="os">Sistema operativo</string>
    <string name="fixed">Disco</string>
    <string name="removable">Extraíble</string>
</resources>
