<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogNetworkErrorHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/dialog_network_error_title"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/helpButtonNetworkError"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/help_icon"
            app:srcCompat="@drawable/baseline_help_outline_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialogNetworkErrorContentTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:minHeight="?attr/listPreferredItemHeight"
        android:text="@string/dialog_network_error_content"
        android:textSize="14sp" />

</LinearLayout>