<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".activities.ActivityTasks"
    android:id="@+id/constraintLayoutTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tasksToolbar"
        layout="@layout/home_toolbar" />

    <View
        android:id="@+id/dividerVerticalTask"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/dividerHorizontalTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasksToolbar" />

    <LinearLayout
        android:id="@+id/linearLayoutLeftTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/dividerVerticalTask"
        app:layout_constraintEnd_toStartOf="@+id/dividerVerticalTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dividerVerticalTask">

        <TextView
            android:id="@+id/textViewTaskDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/description" />

        <TextView
            android:id="@+id/textViewTaskName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="0.8"
            android:text="@string/name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRightTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/dividerVerticalTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dividerVerticalTask"
        app:layout_constraintTop_toTopOf="@+id/dividerVerticalTask">

        <TextView
            android:id="@+id/textViewTaskPID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/pid"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewTaskUser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewTaskMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/memory"
            android:textAlignment="center" />
    </LinearLayout>

    <View
        android:id="@+id/dividerHorizontalTask"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <ImageView
        android:id="@+id/imageViewTaskApplication"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTasksApplication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonTasksApplication"
        app:srcCompat="@drawable/baseline_keyboard_arrow_down_24" />

    <Button
        android:id="@+id/buttonTasksApplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark"
        android:text="@string/applications"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewTaskApplication"
        app:layout_constraintTop_toBottomOf="@+id/dividerHorizontalTask" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTaskApplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:nestedScrollingEnabled="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTasksApplication" />

    <ImageView
        android:id="@+id/imageViewTaskBackground"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTasksBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonTasksBackground"
        app:srcCompat="@drawable/baseline_keyboard_arrow_down_24" />

    <Button
        android:id="@+id/buttonTasksBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/dark"
        android:text="@string/background_task"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewTaskBackground"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTaskApplication" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTaskBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:nestedScrollingEnabled="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTasksBackground" />

</androidx.constraintlayout.widget.ConstraintLayout>